buildscript {
    ext.kotlin_version = "1.6.10"
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
    }
}


plugins {
    id 'jacoco'
    id 'java-library'
    id 'groovy'
    id "org.jetbrains.intellij" version "1.5.3"
    id 'org.kordamp.gradle.markdown' version '2.0.0'

    id 'com.adarshr.test-logger' version '1.7.0'
}

apply plugin: 'kotlin'

group 'org.github.otanikotani'

sourceCompatibility = JavaVersion.VERSION_11

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    implementation group: 'one.util', name: 'streamex', version: '0.6.8'
    implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '4.0.2.Final'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"

    testImplementation 'io.kotest:kotest-runner-junit5:4.4.3'
    testImplementation 'io.kotest:kotest-assertions-core:4.4.3'

}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2022.1'

    updateSinceUntilBuild = false

    plugins = ['github', 'git4idea']
}


patchPluginXml {
    dependsOn markdownToHtml
}

markdownToHtml {
    sourceDir = new File("docs")
}

testlogger {
    theme 'mocha'
    showSkipped true
}

test {
    ignoreFailures = true

    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.5"
}

jacocoTestReport {
    reports {
        xml.enabled true
        xml.destination new File("${buildDir}/reports/jacoco/report.xml")
        csv.enabled false
        html.destination file("${buildDir}/jacocoHtml")
    }
}

compileKotlin {
    kotlinOptions {
        freeCompilerArgs += ["-Xjvm-default=enable"]
    }

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    kotlinOptions {
        jvmTarget = "11"
        apiVersion = "1.6"
        languageVersion = "1.6"
    }
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = "11"
    }
}

publishPlugin {
    token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}